test/corpus/example-stellaris-localisation-en.txt
=====================================================
Stellaris > Modding tutorial > Localisation > English
=====================================================

l_english:
  tutmod_civic: "Semper Exploro"
  tutmod_civic_desc: "This society prioritised scientific exploration over military expansion in the early space age."
  tutmod_civic_effects: "Start with a $science$ and assigned $scientist$ instead of $OUTLINER_FLEETS$."

---

(source_file
  (localisation_file
    (language_localisation
      (language_identifier)
      (localisation_definition
        (identifier)
        (localisation_string)
      )
      (localisation_definition
        (identifier)
        (localisation_string)
      )
      (localisation_definition
        (identifier)
        (localisation_string
          (interpolation
            (identifier)
          )
          (interpolation
            (identifier)
          )
          (interpolation
            (identifier)
          )
        )
      )
    )
  )
)
